--- a/index.html
+++ b/index.html
@@ -268,9 +268,8 @@
         <div class="columns">
           <div class="location">
             <h3>CONTACT</h3>
-            EMAIL:
             <a href="mailto:elielm291@gmail.com?">ELIELM291@GMAIL.COM</a><br>
-            PHONE: <a href="tel:+528338507324">+52 833 850 7324</a>
+            <a href="tel:+528338507324">+52-833-850-7324</a>
             <h3>LOCATION</h3>
             TAMPICO, TAMPS, MEXICO<br>
           </div>
