mejora del footer

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
           </div>
           <div class="rights">
             <h3>FOR RIGHTS</h3>
-            DESIGNED BASED ON<a href="https://www.panicstudio.tv/en/">PanicStudio.tv</a><br>
+            ALL RIGHTS RESERVED ELIEL M. 2021 &copy;<br>
             ICONS MADE BY<a href="https://www.freepik.com" title="Freepik">Freepik</a><br>
-            FROM <a href="https://www.flaticon.com/" title="Flaticon">WWW.FLATICON.COM</a>
+            FROM<a href="https://www.flaticon.com/" title="Flaticon">WWW.FLATICON.COM</a>
           </div>
         </div>
       </div>
