Separe los archivos JS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -35,7 +34,6 @@
 </head>
 
 <body>
-  <div class="main-container">
     <!-- MENU -->
     <nav class="menu">
       <div class="menu-left">
@@ -57,12 +55,7 @@
       </div>
     </nav>
     <!-- MENU-MOBILE -->
-
-
-
-
     <div class="menu-mobile">
-      <div class="menu-open-close">
         <header class="header">
           <a href="#" class="logo">
             <img src="./assets/img/racoon.svg" alt="">
@@ -73,15 +66,14 @@
               <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" /></svg>
           </a>
         </header>
-        <nav id="menu-mobile-items" class="menu-mobile-closed entrance">
+        <nav id="nav" class="exit">
           <ul>
-            <li><a href="#">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#work">WORK</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">CONTACT</a></li>
           </ul>
         </nav>
-      </div>
     </div>
     <!-- MAIN-IMAGE -->
     <section class="main-img ">
@@ -113,7 +105,7 @@
       <div class="grid work">
         <!-- ITEM -->
         <a href="#" class="item" data-id="0">
-          <img src="./assets/img/portada-01.jpg" alt="">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
@@ -126,107 +118,71 @@
           </div>
         </a>
         <!-- ITEM -->
-        <a href="#" class="item" data-id="1">
-          <img src="./assets/img/portada-02.jpg" alt="">
+        <a href="#" class="item" data-id="0">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
                 NO SE QUE PONER
               </div>
               <div class="customer">
-                NO SE QUE PONER X2
+                NO SE QUE PONER X1
               </div>
             </div>
           </div>
         </a>
         <!-- ITEM -->
-        <a href="#" class="item" data-id="2">
-          <img src="./assets/img/portada-03.jpg" alt="">
+        <a href="#" class="item" data-id="0">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
                 NO SE QUE PONER
               </div>
               <div class="customer">
-                NO SE QUE PONER X3
+                NO SE QUE PONER X1
               </div>
             </div>
           </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="3">
-          <img src="./assets/img/portada-04.jpg" alt="">
+        </a>
+        <!-- ITEM -->
+        <a href="#" class="item" data-id="0">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
                 NO SE QUE PONER
               </div>
               <div class="customer">
-                NO SE QUE PONER X4
+                NO SE QUE PONER X1
               </div>
             </div>
           </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="4">
-          <img src="./assets/img/portada-05.jpg" alt="">
+        </a>
+        <!-- ITEM -->
+        <a href="#" class="item" data-id="0">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
                 NO SE QUE PONER
               </div>
               <div class="customer">
-                NO SE QUE PONER X5
+                NO SE QUE PONER X1
               </div>
             </div>
           </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="5">
-          <img src="./assets/img/portada-06.jpg" alt="">
+        </a>
+        <!-- ITEM -->
+        <a href="#" class="item" data-id="0">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
           <div class="bg-hover">
             <div class="info">
               <div class="title">
                 NO SE QUE PONER
               </div>
               <div class="customer">
-                NO SE QUE PONER X6
-              </div>
-            </div>
-          </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="6">
-          <img src="./assets/img/portada-07.jpg" alt="">
-          <div class="bg-hover">
-            <div class="info">
-              <div class="title">
-                NO SE QUE PONER
-              </div>
-              <div class="customer">
-                NO SE QUE PONER X7
-              </div>
-            </div>
-          </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="7">
-          <img src="./assets/img/portada-08.jpg" alt="">
-          <div class="bg-hover">
-            <div class="info">
-              <div class="title">
-                NO SE QUE PONER
-              </div>
-              <div class="customer">
-                NO SE QUE PONER X8
-              </div>
-            </div>
-          </div>
-        </a> <!-- ITEM -->
-        <a href="#" class="item" data-id="8">
-          <img src="./assets/img/portada-09.jpg" alt="">
-          <div class="bg-hover">
-            <div class="info">
-              <div class="title">
-                NO SE QUE PONER
-              </div>
-              <div class="customer">
-                NO SE QUE PONER X9
+                NO SE QUE PONER X1
               </div>
             </div>
           </div>
@@ -307,7 +263,7 @@
     <footer class="footer">
 
     </footer>
-  </div>
+  
   <!-- GALLERY -->
   <div id="details-container">
     <nav class="navbar">
@@ -335,7 +291,7 @@
     <div class="items">
       <div class="item item-hide">
         <div class="main-image">
-          <img src="./assets/img/portada-01.jpg" alt="">
+          <img src="./assets/img/christin-hume-mfB1B1s4sMc-unsplash.jpg" alt="">
         </div>
         <div class="title">
           <h2>
@@ -348,42 +304,16 @@
           </p>
         </div>
       </div>
-      <div class="item item-hide">
-        <div class="main-image">
-          <img src="./assets/img/portada-02.jpg" alt="">
-        </div>
-        <div class="title">
-          <h2>
-            xd
-          </h2>
-        </div>
-        <div class="description">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem quaerat unde cupiditate dolorum,
-            minima asperiores?
-          </p>
-        </div>
-      </div>
-      <div class="item item-hide">
-        <div class="main-image">
-          <img src="./assets/img/portada-03.jpg" alt="">
-        </div>
-        <div class="title">
-          <h2>
-            xd
-          </h2>
-        </div>
-        <div class="description">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem quaerat unde cupiditate dolorum,
-            minima asperiores?
-          </p>
-        </div>
-      </div>
     </div>
   </div>
   <!-- SCREEN -->
   <div id="screen"></div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/menu.js"></script>
+  <script src="assets/js/gallery.js"></script>
+  <script src="assets/js/typed.js"></script>
 </body>
 
 </html>
