Agregue funciones al menu de navegacion movil

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </ul>
   </nav>
   <!-- MENU-MOBILE -->
-  <div class="menu-mobile">
-    <header class="header">
+  <header class="menu-mobile">
+    <div class="container-icon">
       <a href="#" class="logo">
         <img src="./assets/img/racoon.svg" alt="">
       </a>
@@ -58,8 +58,8 @@
           <path d="M0 0h24v24H0z" fill="none" />
           <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" /></svg>
       </a>
-    </header>
-    <nav id="nav" class="exit">
+    </div>
+    <nav id="nav" class="nav ocultar entrance">
       <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="#work">WORK</a></li>
@@ -67,7 +67,10 @@
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </nav>
-  </div>
+    <div class="hamburguer">
+
+    </div>
+  </header>
   <!-- MAIN-IMAGE -->
   <section class="main-img ">
     <div class="main-bg ">
