--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
       </div>
     </div>
     <!-- INTRO -->
-    <section class="intro">
+    <section class="container intro">
       <h2>ABOUT ME</h2>
-      <div>
+      <div class="text__intro">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aut
           incidunt est debitis quo alias non. Magnam odit exercitationem
@@ -248,7 +248,7 @@
     <!-- SKILLS -->
     <section class="skills container" id="skills">
       <h2>SKILLS</h2>
-      <p>FRONT-END WEB DEVELOPMENT</p>
+      <h3>Front-end Development</h3>
       <div class="content__skills">
         <div class="skill">
           <i class="bx bxl-html5"></i>
@@ -274,7 +274,7 @@
             <a href="mailto:elielm291@gmail.com?">ELIELM291@GMAIL.COM</a><br />
             <a href="tel:+528338507324">+52-833-850-7324</a>
             <h3>LOCATION</h3>
-            TAMPICO, TAMPS, MEXICO<br />
+            <p>TAMPICO, TAMPS, MEXICO</p>
           </div>
           <div class="social">
             <a href="https://www.linkedin.com/in/eliel-m/">
@@ -301,13 +301,16 @@
           </div>
           <div class="rights">
             <h3>FOR RIGHTS</h3>
-            ALL RIGHTS RESERVED ELIEL M. 2021 &copy;<br />
-            ICONS MADE BY<a href="https://www.freepik.com" title="Freepik"
-              >Freepik</a
-            ><br />
-            FROM<a href="https://www.flaticon.com/" title="Flaticon"
-              >WWW.FLATICON.COM</a
-            >
+            <p>
+              ALL RIGHTS RESERVED: <br />
+              ELIEL M. 2021 &copy;<br />
+              ICONS MADE BY
+              <a href="https://www.freepik.com" title="Freepik">Freepik</a
+              ><br />
+              FROM<a href="https://www.flaticon.com/" title="Flaticon"
+                >WWW.FLATICON.COM</a
+              >
+            </p>
           </div>
         </div>
       </div>
