--- a/index.html
+++ b/index.html
@@ -259,8 +259,20 @@
           <h3>CSS</h3>
         </div>
         <div class="skill">
+          <i class="bx bxl-bootstrap"></i>
+          <h3>Bootstrap</h3>
+        </div>
+        <div class="skill">
+          <i class="bx bxl-git"></i>
+          <h3>Git</h3>
+        </div>
+        <div class="skill">
           <i class="bx bxl-javascript"></i>
           <h3>JavaScript</h3>
+        </div>
+        <div class="skill">
+          <i class="bx bxl-sass"></i>
+          <h3>SASS</h3>
         </div>
       </div>
     </section>
