reduci margenes en los subtitulos

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <!-- SKILLS -->
     <section class="skills container" id="skills">
       <h2>SKILLS</h2>
-      <h3>Front-end Development</h3>
+      <h3>Front-end</h3>
       <div class="content__skills">
         <div class="skill">
           <i class="bx bxl-html5"></i>
